--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
 
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     
+    <link rel="shortcut icon" href="assets/barber-shop.png" type="image/x-icon">
+
     <title>Dev Ficar Bonito - Sua Barberia</title>
 </head>
 <body>
