Adição de texto para a seção Sobre

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             </div>
             <div class="about-description" data-aos="zoom-out-left" data-aos-delay="300">
                 <h2>Sobre</h2>
-                <p>Lorem ipsum dolor sit amet consectetur. Ornare eget pellentesque proin risus. Orci proin morbi vestibulum convallis leo vestibulum mus. Non duis augue eros mattis a quis sem sodales.</p>
+                <p>Na Dev Ficar Bonito, não se trata somente de cortar cabelo / barba, mas sim de criar um estilo que reflete quem você é. Visite-nos para uma experiência única de beleza masculina e saia com confiança renovada. Agende seu horário hoje e descubra o poder de um visual marcante!</p>
                 <p>Horário de funcionamento: <strong>09:00</strong> ás <strong>19:00</strong></p>
             </div>
         </div>
