--- a/index.html
+++ b/index.html
@@ -49,7 +49,8 @@
             </div>
             <div class="about-description" data-aos="zoom-out-left" data-aos-delay="300">
                 <h2>Sobre</h2>
-                <p>Na Dev Ficar Bonito, não se trata somente de cortar cabelo / barba, mas sim de criar um estilo que reflete quem você é. Visite-nos para uma experiência única de beleza masculina e saia com confiança renovada. Agende seu horário hoje e descubra o poder de um visual marcante!</p>
+                <p>Na <strong>Dev Ficar Bonito</strong>, não se trata somente de cortar cabelo / barba, mas sim de criar um estilo que reflete quem você é. Visite-nos para uma <strong>experiência única</strong> de beleza masculina e saia com confiança renovada.</p>
+                <p>Agende seu horário hoje e descubra o poder de um <strong>visual marcante</strong>!</p>
                 <p>Horário de funcionamento: <strong>09:00</strong> ás <strong>19:00</strong></p>
             </div>
         </div>
