--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     <section class="services">
         <div class="services-content container">
             <h2>Serviços</h2>
-            <p>Lorem ipsum dolor sit amet consectetur. Ornare eget pellentesque proin risus. Orci proin morbi vestibulum convallis leo vestibulum mus. Non duis augue eros mattis a quis sem sodales.</p>
+            <p>De clássico a contemporâneo, nossos cortes de cabelo, bigode e barba são executados sob medida para refletir sua personalidade única.</p>
         </div>
         <section class="haircuts">
             <div class="haircut" data-aos="fade-up" data-aos-delay="150">
