upload função modelo inicial

--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
     <title>Dev Ficar Bonito - Sua Barberia</title>
 </head>
 <body>
+    <button class="theme-button" data-theme="default">Tema Padrão</button>
+    <button class="theme-button" data-theme="light">Tema Claro</button>
+    <button class="theme-button" data-theme="dark">Tema Escuro</button>
     <div class="bg-home">
         <header>
             <nav class="header-content container">
@@ -30,7 +33,7 @@
                     <a href="javascript:void(0)" title="TikTok"><i class="fa-brands fa-tiktok fa-2x"></i></a>
                 </div>
                 <div class="header-logo" data-aos="fade-up" data-aos-delay="300">
-                    <img src="assets/logo.svg" alt="Logo da Barbearia" data-aos="flip-up" data-aos-delay="400" data-aos-duration="1500" />
+                    <img src="assets/logo-light.svg" alt="Logo da Barbearia" data-aos="flip-up" data-aos-delay="400" data-aos-duration="1500" />
                 </div>
                 <a href="javascript:void(0)" class="header-button" data-aos="fade-down" title="Agendar horário">Agendar horário</a>
             </nav>
@@ -98,7 +101,7 @@
             <a href="javascript:void(0)" title="TikTok"><i class="fa-brands fa-tiktok fa-2x"></i></a>
         </div>
         <div>
-            <img src="assets/logo.svg" alt="Logo Barbearia">
+            <img src="assets/logo-light.svg" alt="Logo Barbearia">
         </div>
         <p class="copyright"></p>
         <a href="javascript:void(0)" class="button-whatsapp" target="_blank" title="Agende o seu horário" data-aos="zoom-in-up" data-aos-delay="400">
