--- a/index.html
+++ b/index.html
@@ -40,6 +40,10 @@
                 <h1>ESTILO É UM REFLEXO DA SUA ATITUDE E SUA PERSONALIDADE.</h1>
                 <p>Horário de funcionamento: 09:00 ás 19:00</p>
                 <a href="javascript:void(0)" class="button-contact" target="_blank" title="Agendar horário">Agendar horário</a>
+                <div class="down-icon">
+                    <i class="fa-solid fa-angles-down angles-top"></i>
+                    <i class="fa-solid fa-angles-down angles-bottom"></i>
+                </div>
             </main>
         </header>
     </div>
