--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     <a href="javascript:void(0)" title="TikTok"><i class="fa-brands fa-tiktok fa-2x"></i></a>
                 </div>
                 <div class="header-logo" data-aos="fade-up" data-aos-delay="300">
-                    <img src="assets/logo-light.svg" alt="Logo da Barbearia" data-aos="flip-up" data-aos-delay="400" data-aos-duration="1500" />
+                    <img class="logo" src="assets/logo-light.svg" alt="Logo da Barbearia" data-aos="flip-up" data-aos-delay="400" data-aos-duration="1500" />
                 </div>
                 <a href="javascript:void(0)" class="header-button" data-aos="fade-down" title="Agendar horário">Agendar horário</a>
             </nav>
@@ -104,7 +104,7 @@
             <a href="javascript:void(0)" title="TikTok"><i class="fa-brands fa-tiktok fa-2x"></i></a>
         </div>
         <div>
-            <img src="assets/logo-light.svg" alt="Logo Barbearia">
+            <img class="logo" src="assets/logo-light.svg" alt="Logo Barbearia">
         </div>
         <p class="copyright"></p>
         <a href="javascript:void(0)" class="button-whatsapp" target="_blank" title="Agende o seu horário" data-aos="zoom-in-up" data-aos-delay="400">
