--- a/index.html
+++ b/index.html
@@ -21,10 +21,13 @@
     <title>Dev Ficar Bonito - Sua Barberia</title>
 </head>
 <body>
-    <button class="theme-button" data-theme="light">Tema Claro</button>
-    <button class="theme-button" data-theme="dark">Tema Escuro</button>
+    
     <div class="bg-home">
         <header>
+            <div class="theme-buttons">
+                <button class="theme-button button-light" title="Muda para o modo light" data-theme="light"><i class="fa-solid fa-sun"></i></button>
+                <button class="theme-button button-dark" title="Muda para o modo dark" data-theme="dark"><i class="fa-solid fa-moon"></i></button>
+            </div>
             <nav class="header-content container">
                 <div class="header-icons" data-aos="fade-down">
                     <a href="javascript:void(0)" title="Instagram"><i class="fa-brands fa-instagram fa-2x"></i></a>
