--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 </div>
                 <a href="javascript:void(0)" class="header-button" data-aos="fade-down" title="Agendar horário">Agendar horário</a>
             </nav>
-            <main class="introduction container" data-aos="fade-up" data-aos-delay="400">
+            <section class="introduction container" data-aos="fade-up" data-aos-delay="400">
                 <h1>ESTILO É UM REFLEXO DA SUA ATITUDE E SUA PERSONALIDADE.</h1>
                 <p>Horário de funcionamento: 09:00 ás 19:00</p>
                 <a href="javascript:void(0)" class="button-contact" target="_blank" title="Agendar horário">Agendar horário</a>
@@ -47,11 +47,11 @@
                     <i class="fa-solid fa-angles-down angles-top"></i>
                     <i class="fa-solid fa-angles-down angles-bottom"></i>
                 </div>
-            </main>
+            </section>
         </header>
     </div>
 
-    <section class="about">
+    <main class="about">
         <div class="container about-content">
             <div data-aos="zoom-in" data-aos-delay="100">
                 <img src="assets/images.svg" alt="Imagem sobre a barbearia" />
@@ -63,7 +63,7 @@
                 <p>Horário de funcionamento: <strong>09:00</strong> ás <strong>19:00</strong></p>
             </div>
         </div>
-    </section>
+    </main>
 
     <section class="services">
         <div class="services-content container">
