--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 </div>
                 <a href="javascript:void(0)" class="header-button" data-aos="fade-down" title="Agendar horário">Agendar horário</a>
             </nav>
-            <section class="introduction container" data-aos="fade-up" data-aos-delay="400">
+            <div class="introduction container" data-aos="fade-up" data-aos-delay="400">
                 <h1>ESTILO É UM REFLEXO DA SUA ATITUDE E SUA PERSONALIDADE.</h1>
                 <p>Horário de funcionamento: 09:00 ás 19:00</p>
                 <a href="javascript:void(0)" class="button-contact" target="_blank" title="Agendar horário">Agendar horário</a>
@@ -47,7 +47,7 @@
                     <i class="fa-solid fa-angles-down angles-top"></i>
                     <i class="fa-solid fa-angles-down angles-bottom"></i>
                 </div>
-            </section>
+            </div>
         </header>
     </div>
 
@@ -65,12 +65,12 @@
         </div>
     </main>
 
-    <section class="services">
+    <div class="services">
         <div class="services-content container">
             <h2>Serviços</h2>
             <p>De clássico ao contemporâneo, nossos cortes de cabelo, bigode e barba são executados sob medida para refletir sua personalidade única.</p>
         </div>
-        <section class="haircuts">
+        <div class="haircuts">
             <div class="haircut" data-aos="fade-up" data-aos-delay="150">
                 <img src="assets/corte1.png" alt="Corte tradicional" />
                 <div class="haircut-info">
@@ -92,8 +92,8 @@
                     <button>R$ 70,00</button>
                 </div>
             </div>
-        </section>
-    </section>
+        </div>
+    </div>
 
     <div class="map">
         <h2>Venha Conhecer</h2>
