--- a/index.html
+++ b/index.html
@@ -21,7 +21,15 @@
     <title>Dev Ficar Bonito - Sua Barberia</title>
 </head>
 <body>
-    
+    <div class="modal-promo">
+        <div class="modal-promo-content">
+            <img class="logo" src="assets/presente-vermelho.png" alt="Presente" />
+            <i class="fa-solid fa-xmark close-modal"></i>
+            <h2>Temos um presente pra você!</h2>
+            <p>Entre no nosso clube de fregueses <br>para ganhar vantagens insanas,<br><span>começando com 20% no primeiro corte</span></p>
+            <a href="lp-promo.html" class="button-promo" target="_blank" title="Clique para resgatar o seu desconto">Quero meu desconto</a>
+        </div>
+    </div>
     <div class="bg-home">
         <header>
             <div class="theme-buttons">
