--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
 <body>
     <div class="promo">
         <a href="lp-promo.html">
-            <img class="logo" src="assets/presente-vermelho.png" alt="Presente" />
+            <img class="presente" src="assets/presente-vermelho.png" alt="Presente" />
+            <span class="convite">Clique para ganhar 20% de desconto</span>
         </a>
     </div>
     <!--
