--- a/lp-promo.html
+++ b/lp-promo.html
@@ -27,11 +27,18 @@
         </div>
     </header>
     <main class="lp-principal">
+        <section>
+            <h1>tESTE</h1>
+            <p>teste</p>
+        </section>
         <form>
-            <label for=""></label>
+            <label for="nome">Nome</label>
             <input type="text" name="nome" id="nome" placeholder="Seu nome">
+            <label for="telefone">Telefone</label>
             <input type="tel" name="telefone" id="telefone" placeholder="(xx) xxxxx-xxxx">
+            <label for="email">E-mail</label>
             <input type="email" name="email" id="email" placeholder="mail@email.com">
+            <label for="onde_conheceu">Onde nos conheceu?</label>
             <select name="onde_conheceu" id="onde_conhceu">
                 <option value="">Selecione</option>
                 <option value="instagram">Instagram</option>
