Aviso LP em construção

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 </head>
 <body>
     <div class="promo">
-        <a href="lp-promo.html">
+        <a href="javascript:void(0)" onclick="alert('Em construção! Tente mais tarde &#128521;')"> <!-- <a href="lp-promo.html"> -->
             <img class="presente" src="assets/presente-vermelho.png" alt="Presente" />
             <span class="convite">Clique para ganhar 20% de desconto</span>
         </a>
