--- a/lp-promo.html
+++ b/lp-promo.html
@@ -20,22 +20,38 @@
 
     <title>Dev Ficar Bonito - Sua Barberia</title>
 </head>
-<body class="container">
-    <header class="lp-header">
+<body>
+    <header class="lp-header container">
         <div class="lp-header-logo" data-aos="fade-up" data-aos-delay="300">
             <img class="logo" src="assets/logo-light.svg" alt="Logo da Barbearia" data-aos="flip-up" data-aos-delay="400" data-aos-duration="1500" />
         </div>
     </header>
-    <main class="lp-principal">
+    <main class="lp-principal container">
+        <section>
+            <h1>Quer ganhar descontos e outras vantagens?</h1>
+            <h2>Faça parte do nosso clube de fregueses!</h2>
+            <p>No clube Dev Ficar Bonito você tem maior prioridade de agendamento e pode ganhar descontos!</p>
+            <p>Faça seu cadastro e aproveite!</p>
+            <p>Veja aqui o <a href="javascript:void(0)" title="Regras do Clube Dev Ficar Bonito">regulamento</a>.</p>
+            <button class="botao">Quero me cadastrar!</button>
+        </section>
         <form>
-            <label for=""></label>
+            <label for="nome">Nome</label>
             <input type="text" name="nome" id="nome" placeholder="Seu nome">
+            <label for="telefone">Telefone</label>
             <input type="tel" name="telefone" id="telefone" placeholder="(xx) xxxxx-xxxx">
+            <label for="email">E-mail</label>
             <input type="email" name="email" id="email" placeholder="mail@email.com">
+            <label for="preferencia_dia">Qual ou quais dias da semana você prefere?</label>
+            <select name="onde_conheceu" id="onde_conhceu">
+                <option value="">Selecione</option>
+
+            </select>
+            <label for="onde_conheceu">Onde conheceu a Dev Ficar Bonito?</label>
             <select name="onde_conheceu" id="onde_conhceu">
                 <option value="">Selecione</option>
                 <option value="instagram">Instagram</option>
-                <option value="twitter">Twitter</option>
+                <option value="facebook">Facebook</option>
                 <option value="google">Google</option>
                 <option value="indicacao">Indicação</option>
                 <option value="outro">Outro</option>
