--- a/lp-promo.html
+++ b/lp-promo.html
@@ -26,7 +26,7 @@
             <img class="logo" src="assets/logo-light.svg" alt="Logo da Barbearia" data-aos="flip-up" data-aos-delay="400" data-aos-duration="1500" />
         </div>
     </header>
-    <main class="lp-principal container">
+    <main class="lp-principal container" data-aos="fade-up" data-aos-delay="300">
         <section>
             <h1>Quer ganhar descontos e outras vantagens?</h1>
             <h2>Faça parte do nosso clube de fregueses!</h2>
