Ajuste layout lp

--- a/lp-promo.html
+++ b/lp-promo.html
@@ -21,19 +21,19 @@
     <title>Dev Ficar Bonito - Sua Barberia</title>
 </head>
 <body>
-    <header class="lp-header container">
+    <!-- <header class="lp-header container">
         <div class="lp-header-logo" data-aos="fade-up" data-aos-delay="300">
             <img class="logo" src="assets/logo-light.svg" alt="Logo da Barbearia" data-aos="flip-up" data-aos-delay="400" data-aos-duration="1500" />
         </div>
-    </header>
+    </header> -->
     <main class="lp-principal container" data-aos="fade-up" data-aos-delay="300">
         <section>
+            <img class="logo" src="assets/logo-light.svg" alt="Logo da Barbearia" data-aos="flip-up" data-aos-delay="400" data-aos-duration="1500" />
             <h1>Quer ganhar descontos e outras vantagens?</h1>
             <h2>Faça parte do nosso clube de fregueses!</h2>
-            <p>No clube Dev Ficar Bonito você tem maior prioridade de agendamento e pode ganhar descontos!</p>
+            <p>Além de poder ganhar desconto em produtos e cortes, no clube Dev Ficar Bonito é muito mais simples fazser o seu agendamento</p>
             <p>Faça seu cadastro e aproveite!</p>
             <p>Veja aqui o <a href="javascript:void(0)" title="Regras do Clube Dev Ficar Bonito">regulamento</a>.</p>
-            <button class="botao">Quero me cadastrar!</button>
         </section>
         <form>
             <label for="nome">Nome</label>
@@ -56,6 +56,7 @@
                 <option value="indicacao">Indicação</option>
                 <option value="outro">Outro</option>
             </select>
+            <button type="submit" class="botao">Enviar</button>
         </form>
     </main>
     <footer class="lp-footer">
